--- a/KINOv2/KINOv2/Views/Manage/_Layout.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/_Layout.cshtml
@@ -12,7 +12,9 @@
             @await Html.PartialAsync("_ManageNav")
         </div>
         <div class="col-md-9">
-            @RenderBody()
+            <div id="Result">
+                @RenderBody()
+            </div>
         </div>
     </div>
 </div>
