--- a/KINOv2/KINOv2/Views/Content/FilmManage.cshtml
+++ b/KINOv2/KINOv2/Views/Content/FilmManage.cshtml
@@ -1,11 +1,11 @@
 ﻿@model FilmManageViewModel
 @{
-    ViewData["Title"] = "FilmManage";
+    ViewData["Title"] = "Управление фильмами";
 }
 
-<h2>FilmManage</h2>
+<h2>@ViewData["Title"]</h2>
 
-<h4>Добавление фильма</h4>
+<h3>@ViewData["Message"]</h3>
 <hr />
 <div class="container">
     <div class="row">
