--- a/KINOv2/KINOv2/Views/Home/Contact.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Contact.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Контакты";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+@*<h3>@ViewData["Message"]</h3>*@
 
-<address>
+@*<address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
@@ -14,13 +14,16 @@
 <address>
     <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+</address>*@
 
 <div class="container">
     <div class="row">
         <div class="col-lg-6">
-            <strong>Димон:</strong><p>Здесь могла быть ваша реклама.</p><br />
-            <strong>Леха:</strong><p>Здесь могла быть ваша реклама.</p><br />
+            <address>
+                <strong>Димон:</strong><p>Да там почти нет отличий. За час перенесу. &copy;</p><br />
+                <strong>Леха:</strong><p>Кроссплатформенность &hearts; </p><br />
+                <strong>Саня:</strong><p>На выходных обязательно возьмусь за React. &copy;</p>
+            </address>
         </div>
 
         <div class="col-lg-6">
