--- a/KINOv2/KINOv2/Views/Home/Index.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
     ViewData["Title"] = "Главная страница";
 
 <h1>Популярные фильмы</h1>
-    Html.RenderPartial("FeaturedFilms");
+    await Html.RenderPartialAsync("FeaturedFilms");
 
 <h1>Наши залы</h1>
-    Html.RenderPartial("HallsSlideshow");
+    await Html.RenderPartialAsync("HallsSlideshow");
 }
 
 @*<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
