--- a/KINOv2/KINOv2/Views/Manage/ChangePassword.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
-        <form method="post">
+        <form asp-action="ChangePassword" asp-controller="Manage" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="OldPassword"></label>
@@ -27,13 +27,13 @@
             </div>
             <button type="submit" class="btn btn-default">Update password</button>
         </form>
-        <form asp-controller="" asp-action=""
+        @*<form asp-controller="" asp-action=""
               data-ajax-begin="onBegin" data-ajax-complete="onComplete"
     data-ajax-failure="onFailed" data-ajax-success="onSuccess"
               data-ajax="true" data-ajax-method="POST">
             <input type="submit" value="Save" class="btn btn-primary" />
             <div id="Results"></div>
-        </form>
+        </form>*@
     </div>
 </div>
 
