--- a/KINOv2/KINOv2/Views/Manage/_ManageNav.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/_ManageNav.cshtml
@@ -5,12 +5,12 @@
 }
 
 <ul class="nav nav-pills nav-stacked">
-    <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
-    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-action="ChangePassword">Password</a></li>
+    <li class="profile-menu first active"><a asp-action="Index">Profile</a></li>
+    <li class="profile-menu second"><a onclick="OnLinkClick(jQuery.Event)" asp-action="ChangePassword" data-target="Result" id="prSecond">Password</a></li>
     @if (hasExternalLogins)
     {
-        <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-action="ExternalLogins">External logins</a></li>
+        <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-action="ExternalLogins" data-target="Result" id="aUpdate">External logins</a></li>
     }
-    <li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-action="TwoFactorAuthentication">Two-factor authentication</a></li>
+    <li class="profile-menu third" ><a asp-action="TwoFactorAuthentication" data-target="Result" id="prThird">Two-factor authentication</a></li>
 </ul>
 
