--- a/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-        <link rel="stylesheet" href="~/lib/fonts/font-awesome/css/font-awesome.css">
+        <link rel="stylesheet" href="~/lib/fonts/font-awesome/css/font-awesome.css" />
+        <link rel="stylesheet" href="~/lib/MvcGrid/css/mvc-grid.css" />
+        <link rel="stylesheet" href="~/lib/rich-text-editor/css/richtext.min.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -74,10 +76,15 @@
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/jquery/dist/core.js"></script>
+        <script src="~/lib/MvcGrid/js/mvc-grid.js"></script>
+        <script>
+            $('.mvc-grid').mvcgrid();
+        </script>
+        @*<script src="~/lib/jquery/dist/core.js"></script>*@
         <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
         <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js" asp-append-version="true"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/rich-text-editor/js/jquery.richtext.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/js/slideshow.js" asp-append-version="true"></script>
 
