--- a/KINOv2/KINOv2/Views/_ViewImports.cshtml
+++ b/KINOv2/KINOv2/Views/_ViewImports.cshtml
@@ -5,4 +5,6 @@
 @using KINOv2.Models.ManageViewModels
 @using KINOv2.Models.ReferenceBooks
 @using KINOv2.Models.ContentManageViewModels
+@using NonFactors.Mvc.Grid
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, KINOv2
