--- a/KINOv2/KINOv2/Views/Home/Affiche.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Affiche.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewData["Title"]</h2>
 <h2>@ViewData["Message"]</h2>
 
-<div class="container">
+<div >
 
     @if (User.IsInRole("Admin"))
     {
@@ -38,9 +38,9 @@
             <input type="submit" value="Save" class="btn btn-primary" />
             <div id="Results"></div>
         </form>*@
-
-    <page-link page-model=@(ViewData["PageView"] as PageViewModel) page-action="Affiche"></page-link>
-
+        <nav>
+            <page-link page-model=@(ViewData["PageView"] as PageViewModel) page-action="Affiche"></page-link>
+        </nav>
     @(Html
             .Grid(ViewData["Films"] as IEnumerable<Film>)
             .Build(columns =>
