--- a/KINOv2/KINOv2/wwwroot/css/site.css
+++ b/KINOv2/KINOv2/wwwroot/css/site.css
@@ -419,3 +419,7 @@ input[type="text"] {
     position: relative;
     line-height: 15px;
 }
+
+/*.comment:hover {
+    box-shadow: inset 0 0 2px #f6a21c;
+}*/
