--- a/KINOv2/KINOv2/Views/_ViewImports.cshtml
+++ b/KINOv2/KINOv2/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using KINOv2.Models.ReferenceBooks
 @using KINOv2.Models.ContentManageViewModels
 @using NonFactors.Mvc.Grid
+@using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, KINOv2
